--- a/package.json
+++ b/package.json
@@ -9,16 +9,31 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@sanity/client": "^3.3.5",
+    "@stripe/stripe-js": "^1.36.0",
+    "axios": "^0.27.2",
     "next": "12.2.5",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-icons": "^4.4.0",
+    "react-reveal": "^1.2.2",
+    "react-smooth-scrolling": "^1.0.2",
+    "react-toastify": "^9.0.8",
+    "stripe": "^10.7.0",
+    "tailwind-scrollbar-hide": "^1.1.7",
+    "toast": "^0.5.4",
+    "zustand": "^4.1.1"
   },
   "devDependencies": {
     "@types/node": "18.7.13",
     "@types/react": "18.0.17",
     "@types/react-dom": "18.0.6",
+    "autoprefixer": "^10.4.8",
     "eslint": "8.22.0",
     "eslint-config-next": "12.2.5",
+    "postcss": "^8.4.16",
+    "tailwindcss": "^3.1.8",
+    "tailwindcss-animate": "^1.0.5",
     "typescript": "4.8.2"
   }
 }
